add heroku config

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,7 @@ yarn.lock
 .env
 
 # Dist
-static/assets
-static/server
+storybook-static/
 
 # Webpack
 webpack-assets.json
@@ -29,6 +28,3 @@ webpack-stats.json
 
 *.sublime-workspace
 *.sublime-project
-
-# Tests
-coverage/
