--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
-    "@storybook/react": "^3.4.8",
     "@storybook/addon-actions": "^3.4.8",
     "@storybook/addon-links": "^3.4.8",
     "@storybook/addons": "^3.4.8",
-    "babel-runtime": "^6.26.0"
+    "@storybook/react": "^3.4.8",
+    "babel-runtime": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^23.4.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --config jest.config.json",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "heroku-postbuild": "npm run build-storybook",
