--- a/package.json
+++ b/package.json
@@ -15,21 +15,32 @@
     "@storybook/addons": "^3.4.8",
     "@storybook/react": "^3.4.8",
     "babel-runtime": "^6.26.0",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "jest": "^23.4.1"
+    "jest": "^23.4.1",
+    "rimraf": "^2.6.2",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -s storybook-static -o dist",
-    "build": "rm -rf dist && mkdir -p dist/components && babel -d dist src",
+    "build": "npm run clean && npm run build:lib && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "build:lib": "babel src --out-dir dist --ignore __tests__",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore __tests__",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.js -o dist/redux-form-ui.js",
+    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js -o dist/redux-form-ui.min.js",
     "heroku-postbuild": "npm run build-storybook",
     "start": "node server.js",
-    "test": "NODE_ENV=test jest --config jest.config.json",
-    "clean-dist": "rm -rf ./dist",
+    "clean": "rimraf $(cd src; ls) dist lib es",
     "postpublish": "git push --tags",
     "prepare": "npm run build",
     "preversion": "npm test",
+    "validate": " npm run test:cov && npm run clean && npm run build",
+    "test": "cross-env NODE_ENV=test jest --runInBand --config jest.config.json",
+    "test:watch": "npm test -- --watch",
+    "test:cov": "npm run test -- --coverage",
     "ship-it": "npm publish --tag next"
   },
   "repository": {
