--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "redux-starter-ui",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "dist/index.js",
+  "main": "./index.js",
+  "module": "./es/index.js",
+  "modules.root": "./es",
+  "jsnext:main": "./es/index.js",
+  "sideEffects": false,
   "dependencies": {
     "babel-core": "^6.26.3",
     "express": "^4.16.3",
@@ -35,8 +39,7 @@
     "start": "node server.js",
     "clean": "rimraf $(cd src; ls) dist lib es",
     "postpublish": "git push --tags",
-    "prepare": "npm run build",
-    "preversion": "npm test",
+    "prepublishOnly": "npm run test:cov && npm run clean && npm run build",
     "validate": " npm run test:cov && npm run clean && npm run build",
     "test": "cross-env NODE_ENV=test jest --runInBand --config jest.config.json",
     "test:watch": "npm test -- --watch",
