--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/addon-links": "^3.4.8",
     "@storybook/addons": "^3.4.8",
     "@storybook/react": "^3.4.8",
+    "babel-cli": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.0",
     "enzyme": "^3.3.0",
