--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.1",
     "node-sass": "^4.9.2",
     "rimraf": "^2.6.2",
