add webpack config

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@storybook/addon-links": "^4.0.0-alpha.14",
     "@storybook/addons": "^4.0.0-alpha.14",
     "@storybook/react": "^4.0.0-alpha.14",
+    "autoprefixer": "^9.0.2",
     "babel-cli": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.0",
@@ -28,21 +29,26 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.1",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "postcss-loader": "^2.1.6",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build": "npm run clean && npm run build:lib && npm run build:es",
+    "build": "npm run clean && npm run build:lib && npm run build:es && npm run build:es:css && npm run build:umd && npm run build:umd:min",
     "build:lib": "babel src --out-dir lib --ignore __tests__",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore __tests__",
-    "build:umd": "cross-env NODE_ENV=development webpack src/index.js -o dist/redux-starter-ui.js",
-    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js -o dist/redux-starter-ui.min.js",
+    "build:es:css": "babel src --out-dir es --copy-files --only .scss",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.js -o dist/index.js",
+    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js -o dist/index.min.js",
     "heroku-postbuild": "npm run build-storybook",
     "start": "node server.js",
     "clean": "rimraf $(cd src; ls) dist lib es",
