--- a/jest.config.json
+++ b/jest.config.json
@@ -14,6 +14,7 @@
   "setupFiles": [
     "<rootDir>/scripts/enzyme.config.js"
   ],
+  "roots": ["<rootDir>/src"],
   "transform": {
     "^.+\\.js$": "babel-jest"
   }
