--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-starter-ui",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "",
   "main": "./lib/index.js",
   "module": "./es/index.js",
@@ -22,6 +22,7 @@
     "@storybook/react": "^4.0.0-alpha.14",
     "autoprefixer": "^9.0.2",
     "babel-cli": "^6.26.0",
+    "babel-plugin-css-modules-transform": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
@@ -44,7 +45,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "npm run clean && npm run build:lib && npm run build:lib:css && npm run build:umd && npm run build:umd:min",
-    "build:lib": "babel src --out-dir lib --ignore __tests__",
+    "build:lib": "babel src --out-dir lib",
     "build:lib:css": "babel src --out-dir lib --copy-files --only .scss",
     "build:umd": "cross-env NODE_ENV=development webpack src/index.js -o dist/index.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js -o dist/index.min.js",
