--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "bourbon-neat": "^3.0.0",
     "express": "^4.16.3",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^4.0.0-alpha.14",
