--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-tag-input": "^5.1.2",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2"
   },
