--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@storybook/react": "^4.0.0-alpha.14",
     "autoprefixer": "^9.0.2",
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-css-modules-transform": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.3.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-react": "^7.10.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.1",
     "mini-css-extract-plugin": "^0.4.1",
@@ -57,10 +61,11 @@
     "clean": "rimraf $(cd src; ls) dist lib",
     "postpublish": "git push --tags",
     "prepublishOnly": "npm run test:cov && npm run clean && npm run build",
-    "validate": " npm run test:cov && npm run clean && npm run build",
+    "validate": " npm run test:cov && npm run clean && npm run build && npm run lint",
     "test": "cross-env NODE_ENV=test jest --runInBand --config jest.config.json",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run test -- --coverage",
+    "lint": "eslint -c .eslintrc src",
     "ship-it": "npm publish --tag next"
   },
   "repository": {
