--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-eslint": "^8.2.6",
     "babel-plugin-css-modules-transform": "^1.6.1",
     "babel-runtime": "^6.26.0",
+    "codecov": "^3.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
