--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "babel-plugin-css-modules-transform": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "codecov": "^3.0.4",
-    "codecov.io": "^0.1.6",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
@@ -65,7 +64,7 @@
     "postpublish": "git push --tags",
     "prepublishOnly": "npm run test:cov && npm run clean && npm run build",
     "validate": " npm run test:cov && npm run clean && npm run build && npm run lint",
-    "test": "cross-env NODE_ENV=test jest --runInBand",
+    "test": "cross-env NODE_ENV=test jest --runInBand --config jest.config.json",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run test -- --coverage",
     "lint": "eslint -c .eslintrc src",
@@ -95,43 +94,5 @@
         "*.js"
       ]
     }
-  ],
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.js",
-      "!src/**/__tests__/**/*.js"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov",
-      "html"
-    ],
-    "moduleFileExtensions": [
-      "jsx",
-      "js",
-      "json"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/dist/"
-    ],
-    "moduleNameMapper": {
-      "^.*\\.(css|scss)$": "identity-obj-proxy"
-    },
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "testEnvironment": "jsdom",
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true,
-    "setupFiles": [
-      "<rootDir>/scripts/enzyme.config.js"
-    ],
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    }
-  }
+  ]
 }
