add tests to index

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,7 @@
 {
   "collectCoverageFrom": [
     "src/**/*.js",
+    "!src/**/*.stories.js",
     "!src/**/__tests__/**/*.js"
   ],
   "coverageReporters": [
