--- a/package.json
+++ b/package.json
@@ -56,15 +56,15 @@
     "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min && npm run build:lib:css",
     "build:lib": "babel src --out-dir lib --ignore __tests__,__mocks__,.stories.js",
     "build:lib:css": "babel src --out-dir lib --copy-files --only .scss",
-    "build:umd": "NODE_ENV=development webpack src/index.js -o dist/index.js",
-    "build:umd:min": "NODE_ENV=production webpack src/index.js -o dist/index.min.js",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.js -o dist/index.js",
+    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js -o dist/index.min.js",
     "heroku-postbuild": "npm run build-storybook",
     "server": "node server.js",
     "clean": "rimraf $(cd src; ls) dist lib",
     "postpublish": "git push --tags",
     "prepublishOnly": "npm run test:cov && npm run clean && npm run build",
     "validate": " npm run test:cov && npm run clean && npm run build && npm run lint",
-    "test": "NODE_ENV=test jest --runInBand --config jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --runInBand --config jest.config.json",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run test -- --coverage",
     "lint": "eslint -c .eslintrc src",
