--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "test": "cross-env NODE_ENV=test jest --runInBand --config jest.config.json",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run test -- --coverage",
-    "lint": "eslint -c .eslintrc src",
-    "ship-it": "npm publish --tag next"
+    "lint": "eslint -c .eslintrc src"
   },
   "repository": {
     "type": "git",
