--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ script:
 deploy:
   - provider: releases
     skip_cleanup: true
-    api_key:
-      secure: $GITHUB_OAUTH_TOKEN
+    api_key: $GITHUB_OAUTH_TOKEN
     on:
       repo: wearepush/redux-starter-ui
   - provider: npm
