--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ deploy:
   - provider: releases
     skip_cleanup: true
     api_key: $GITHUB_OAUTH_TOKEN
+    file: "*"
     on:
       repo: wearepush/redux-starter-ui
   - provider: npm
