--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
     email: $NPM_EMAIL
     api_key: $NPM_TOKEN
     skip_cleanup: true
-    tag: latest
+    tag: next
     on:
       repo: wearepush/redux-starter-ui
       tags: true
