--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-flatpickr": "^3.6.4",
     "react-redux": "^5.0.7",
     "react-tag-input": "^5.1.2",
     "redux": "^4.0.0",
