--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "redux-form": "^7.4.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^4.0.0-alpha.14",
-    "@storybook/addon-links": "^4.0.0-alpha.14",
-    "@storybook/addons": "^4.0.0-alpha.14",
-    "@storybook/react": "^4.0.0-alpha.14",
+    "@storybook/addon-actions": "^4.0.0-alpha.16",
+    "@storybook/addon-info": "^4.0.0-alpha.16",
+    "@storybook/addon-links": "^4.0.0-alpha.16",
+    "@storybook/addons": "^4.0.0-alpha.16",
+    "@storybook/react": "^4.0.0-alpha.16",
     "autoprefixer": "^9.0.2",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.6",
     "babel-plugin-css-modules-transform": "^1.6.1",
+    "babel-plugin-react-docgen": "^2.0.0-babel7.0",
     "babel-runtime": "^6.26.0",
     "codecov": "^3.0.4",
     "cross-env": "^5.2.0",
@@ -37,6 +39,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.3.0",
     "eslint-loader": "^2.1.0",
+    "eslint-plugin-jsdoc": "^3.7.1",
     "eslint-plugin-react": "^7.10.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.1",
