--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@storybook/addon-actions": "^4.0.0-alpha.16",
     "@storybook/addon-info": "^4.0.0-alpha.16",
+    "@storybook/addon-knobs": "^3.4.10",
     "@storybook/addon-links": "^4.0.0-alpha.16",
     "@storybook/addons": "^4.0.0-alpha.16",
     "@storybook/react": "^4.0.0-alpha.16",
