move jest config to package

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags",
     "validate": " npm run test:cov && npm run clean && npm run build && npm run lint",
-    "test": "cross-env NODE_ENV=test jest --runInBand --config jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --runInBand",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run test -- --coverage",
     "lint": "eslint -c .eslintrc src"
@@ -103,5 +103,40 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/**/*.stories.js",
+      "!src/**/__tests__/**/*.js"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ],
+    "moduleFileExtensions": [
+      "jsx",
+      "js",
+      "json"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ],
+    "moduleNameMapper": {
+      "^.*\\.(css|scss)$": "identity-obj-proxy"
+    },
+    "moduleDirectories": ["node_modules"],
+    "testEnvironment": "jsdom",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
+    "setupFiles": [
+      "<rootDir>/scripts/enzyme.config.js"
+    ],
+    "roots": ["<rootDir>/src"],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
