--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "jsnext:main": "./es/index.js",
   "sideEffects": false,
   "dependencies": {
-    "babel-core": "^6.26.3",
     "bourbon": "^5.1.0",
     "bourbon-neat": "^3.0.0",
     "express": "^4.16.3",
@@ -21,23 +20,30 @@
     "redux-form": "^7.4.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^4.0.0-alpha.16",
-    "@storybook/addon-info": "^4.0.0-alpha.16",
-    "@storybook/addon-knobs": "^3.4.10",
-    "@storybook/addon-links": "^4.0.0-alpha.16",
-    "@storybook/addons": "^4.0.0-alpha.16",
-    "@storybook/react": "^4.0.0-alpha.16",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "@storybook/addon-actions": "^4.0.0-alpha.20",
+    "@storybook/addon-info": "^4.0.0-alpha.20",
+    "@storybook/addon-knobs": "^4.0.0-alpha.20",
+    "@storybook/addon-links": "^4.0.0-alpha.20",
+    "@storybook/addons": "^4.0.0-alpha.20",
+    "@storybook/react": "^4.0.0-alpha.20",
     "autoprefixer": "^9.1.3",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.6",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
     "babel-plugin-css-modules-transform": "^1.6.1",
     "babel-plugin-react-docgen": "^2.0.0-babel7.0",
-    "babel-runtime": "^6.26.0",
-    "codecov": "^3.0.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "codecov": "^4.0.0-0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "enzyme": "^3.4.4",
-    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.1",
     "eslint": "^5.4.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-jsdoc": "^3.8.0",
@@ -45,15 +51,16 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.5.0",
     "mini-css-extract-plugin": "^0.4.2",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "redux-devtools-extension": "^2.13.5",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
+    "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.17.1",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   },
   "scripts": {
