--- a/package.json
+++ b/package.json
@@ -9,57 +9,58 @@
   "dependencies": {
     "bourbon": "^5.1.0",
     "bourbon-neat": "^3.0.0",
-    "express": "^4.16.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "express": "^4.16.4",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-flatpickr": "^3.6.4",
-    "react-redux": "^5.0.7",
-    "react-tag-input": "^5.2.3",
-    "redux": "^4.0.0",
+    "react-redux": "^5.1.1",
+    "react-tag-input": "^6.1.0",
+    "redux": "^4.0.1",
     "redux-form": "^7.4.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/runtime": "^7.1.2",
-    "@storybook/addon-actions": "^4.0.0-alpha.23",
-    "@storybook/addon-info": "^4.0.0-alpha.23",
-    "@storybook/addon-knobs": "^4.0.0-alpha.23",
-    "@storybook/addon-links": "^4.0.0-alpha.23",
-    "@storybook/addons": "^4.0.0-alpha.23",
-    "@storybook/react": "^4.0.0-alpha.23",
-    "autoprefixer": "^9.1.5",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/runtime": "^7.1.5",
+    "@storybook/addon-actions": "^4.0.9",
+    "@storybook/addon-info": "^4.0.9",
+    "@storybook/addon-knobs": "^4.0.9",
+    "@storybook/addon-links": "^4.0.9",
+    "@storybook/addons": "^4.0.9",
+    "@storybook/react": "^4.0.9",
+    "autoprefixer": "^9.3.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "babel-plugin-css-modules-transform": "^1.6.1",
-    "babel-plugin-react-docgen": "^2.0.0-babel7.0",
+    "babel-plugin-css-modules-transform": "^1.6.2",
+    "babel-plugin-react-docgen": "^2.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "enzyme": "^3.5.0",
-    "enzyme-adapter-react-16": "^1.3.1",
-    "eslint": "^5.6.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "eslint": "^5.9.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-jsdoc": "^3.8.0",
     "eslint-plugin-react": "^7.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.4.5",
     "moment": "^2.22.2",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "redux-devtools-extension": "^2.13.5",
+    "redux-devtools-extension": "^2.13.7",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "webpack": "^4.20.2",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
