--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "dependencies": {
     "bourbon": "^5.1.0",
     "bourbon-neat": "^3.0.0",
+    "classnames": "^2.2.6",
     "express": "^4.16.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
+    "react-dom": "^16.7.0",
     "react-flatpickr": "^3.6.4",
     "react-redux": "^6.0.0",
     "react-tag-input": "^5.2.3",
@@ -19,18 +23,16 @@
     "redux-form": "^8.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/runtime": "^7.2.0",
-    "@storybook/addon-actions": "^4.1.1",
-    "@storybook/addon-info": "^4.1.1",
-    "@storybook/addon-knobs": "^4.1.1",
-    "@storybook/addon-links": "^4.1.1",
-    "@storybook/addons": "^4.1.1",
-    "@storybook/react": "^4.1.1",
-    "autoprefixer": "^9.4.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
+    "@storybook/addon-actions": "^4.1.3",
+    "@storybook/addon-info": "^4.1.3",
+    "@storybook/addon-knobs": "^4.1.3",
+    "@storybook/addon-links": "^4.1.3",
+    "@storybook/react": "^4.1.3",
+    "autoprefixer": "^9.4.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -44,23 +46,22 @@
     "css-loader": "^2.0.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^5.10.0",
+    "eslint": "^5.11.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-jsdoc": "^3.14.0",
+    "eslint-plugin-jsdoc": "^3.14.1",
     "eslint-plugin-react": "^7.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "moment": "^2.23.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "redux-devtools-extension": "^2.13.7",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
+    "serve-static": "^1.13.2",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.27.1",
+    "uglifyjs-webpack-plugin": "^2.1.0",
+    "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
