--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.7.0",
-    "react-flatpickr": "^3.6.4",
+    "react-flatpickr": "^3.7.1",
     "react-redux": "^6.0.0",
     "react-tag-input": "^5.2.3",
     "redux": "^4.0.1",
@@ -25,19 +25,19 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/preset-env": "^7.2.3",
-    "@storybook/addon-actions": "^4.1.6",
-    "@storybook/addon-info": "^4.1.6",
-    "@storybook/addon-knobs": "^4.1.6",
-    "@storybook/addon-links": "^4.1.6",
-    "@storybook/react": "^4.1.6",
-    "autoprefixer": "^9.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.3.1",
+    "@storybook/addon-actions": "5.0.0-beta.1",
+    "@storybook/addon-info": "5.0.0-beta.1",
+    "@storybook/addon-knobs": "5.0.0-beta.1",
+    "@storybook/addon-links": "5.0.0-beta.1",
+    "@storybook/react": "5.0.0-beta.1",
+    "autoprefixer": "^9.4.7",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-react-docgen": "^2.0.0",
+    "babel-plugin-react-docgen": "^2.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
@@ -45,13 +45,13 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^5.12.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "eslint": "^5.13.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-jsdoc": "^3.15.1",
-    "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-jsdoc": "^4.1.0",
+    "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -61,7 +61,7 @@
     "serve-static": "^1.13.2",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.28.4",
+    "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
   "scripts": {
