--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-starter-ui",
-  "version": "1.2.33",
+  "version": "2.0.0-beta.0",
   "description": "",
   "main": "./lib/index.js",
   "module": "./es/index.js",
