[chore] add next to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,11 @@ deploy:
     on:
       repo: wearepush/redux-starter-ui
       tags: true
+  - provider: npm
+    email: $NPM_EMAIL
+    api_key: $NPM_TOKEN
+    skip_cleanup: true
+    on:
+      repo: wearepush/redux-starter-ui
+      branch: next
+      tag: next
