--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ deploy:
     skip_cleanup: true
     on:
       repo: wearepush/redux-starter-ui
-      tags: true
+      branch: master
+      tag: latest
   - provider: npm
     email: $NPM_EMAIL
     api_key: $NPM_TOKEN
