[chore] add next to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,4 @@ deploy:
     skip_cleanup: true
     on:
       repo: wearepush/redux-starter-ui
-      branch: master
-      tag: latest
-  - provider: npm
-    email: $NPM_EMAIL
-    api_key: $NPM_TOKEN
-    skip_cleanup: true
-    on:
-      repo: wearepush/redux-starter-ui
-      branch: next
-      tag: next
+      tags: true
