--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
+    "@emotion/babel-preset-css-prop": "^10.0.7",
     "@storybook/addon-actions": "5.0.0-beta.2",
     "@storybook/addon-info": "5.0.0-beta.2",
     "@storybook/addon-knobs": "5.0.0-beta.2",
