--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "classnames": "^2.2.6",
     "emotion-theming": "^10.0.7",
     "express": "^4.16.4",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.3",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.3",
     "react-flatpickr": "^3.7.1",
-    "react-redux": "^6.0.0",
-    "react-tag-input": "^6.2.1",
+    "react-redux": "^6.0.1",
+    "react-tag-input": "^6.3.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@emotion/babel-preset-css-prop": "^10.0.7",
-    "@storybook/addon-actions": "5.0.0-beta.2",
-    "@storybook/addon-info": "5.0.0-beta.2",
-    "@storybook/addon-knobs": "5.0.0-beta.2",
-    "@storybook/addon-links": "5.0.0-beta.2",
-    "@storybook/react": "5.0.0-beta.2",
-    "autoprefixer": "^9.4.7",
+    "@storybook/addon-actions": "5.0.0-rc.5",
+    "@storybook/addon-info": "5.0.0-rc.5",
+    "@storybook/addon-knobs": "5.0.0-rc.5",
+    "@storybook/addon-links": "5.0.0-rc.5",
+    "@storybook/react": "5.0.0-rc.5",
+    "autoprefixer": "^9.4.8",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
@@ -48,9 +48,9 @@
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
-    "enzyme": "^3.8.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-jsdoc": "^4.1.0",
     "eslint-plugin-react": "^7.12.4",
@@ -65,7 +65,7 @@
     "serve-static": "^1.13.2",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.3",
+    "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3"
   },
   "scripts": {
