#26 decrease react motion version

--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -1,11 +1,11 @@
 {
   "presets": [
     "@babel/preset-env",
-    "@babel/preset-react",
-    "@emotion/babel-preset-css-prop"
+    "@babel/preset-react"
   ],
   "plugins": [
+    "emotion",
     "@babel/plugin-proposal-class-properties",
-    ["react-docgen", {}, 'react-docgen-storybook']
+    ["react-docgen", {}, "react-docgen-storybook"]
   ]
 }
