--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": [
     "@babel/preset-env",
-    "@babel/preset-react",
-    "@emotion/babel-preset-css-prop"
+    "@babel/preset-react"
   ],
   "plugins": [
+    "emotion",
     "@babel/plugin-proposal-class-properties",
     [
       "css-modules-transform",
@@ -14,5 +14,6 @@
         ]
       }
     ]
-  ]
+  ],
+  "ignore": ["node_modules"]
 }
