--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
+    "jest-emotion": "^10.0.7",
+    "jest-enzyme": "^7.0.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
