--- a/package.json
+++ b/package.json
@@ -7,58 +7,58 @@
   "modules.root": "./es",
   "jsnext:main": "./es/index.js",
   "dependencies": {
-    "@emotion/core": "^10.0.7",
-    "@emotion/styled": "^10.0.7",
+    "@emotion/core": "^10.0.9",
+    "@emotion/styled": "^10.0.9",
     "bourbon": "^5.1.0",
     "bourbon-neat": "^3.0.1",
     "classnames": "^2.2.6",
-    "emotion": "^10.0.7",
-    "emotion-theming": "^10.0.7",
+    "emotion": "^10.0.9",
+    "emotion-theming": "^10.0.9",
     "express": "^4.16.4",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "react-dnd": "^7.0.2",
-    "react-dnd-html5-backend": "^7.0.2",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.4",
+    "react-dnd": "^7.3.2",
+    "react-dnd-html5-backend": "^7.2.0",
+    "react-dom": "^16.8.4",
     "react-flatpickr": "^3.7.1",
     "react-redux": "^6.0.1",
-    "react-tag-input": "^6.3.0",
+    "react-tag-input": "^6.4.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "@emotion/babel-preset-css-prop": "^10.0.7",
-    "@storybook/addon-actions": "5.0.0-beta.4",
-    "@storybook/addon-info": "5.0.0-beta.4",
-    "@storybook/addon-knobs": "5.0.0-beta.4",
-    "@storybook/addon-links": "5.0.0-beta.4",
-    "@storybook/react": "5.0.0-beta.4",
-    "autoprefixer": "^9.4.8",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@emotion/babel-preset-css-prop": "^10.0.9",
+    "@storybook/addon-actions": "^5.0.1",
+    "@storybook/addon-info": "^5.0.1",
+    "@storybook/addon-knobs": "^5.0.1",
+    "@storybook/addon-links": "^5.0.1",
+    "@storybook/react": "^5.0.1",
+    "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-emotion": "^10.0.7",
+    "babel-plugin-emotion": "^10.0.9",
     "babel-plugin-react-docgen": "^2.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
+    "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^5.14.1",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "eslint": "^5.15.1",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-jsdoc": "^4.1.0",
+    "eslint-plugin-jsdoc": "^4.4.1",
     "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.1.0",
-    "jest-emotion": "^10.0.7",
+    "jest": "^24.5.0",
+    "jest-emotion": "^10.0.9",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -67,8 +67,8 @@
     "sass-loader": "^7.1.0",
     "serve-static": "^1.13.2",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.5",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
   "scripts": {
