--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-flatpickr": "^3.9.0",
     "react-redux": "^7.0.3",
     "react-tag-input": "^6.4.0",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
     "redux-form": "^8.2.1"
   },
