--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dnd": "^7.4.5",
-    "react-dnd-html5-backend": "^7.4.4",
+    "react-dnd": "5.0.0",
+    "react-dnd-html5-backend": "3.0.2",
     "react-dom": "^16.8.6",
     "react-flatpickr": "^3.9.0",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.0",
     "react-tag-input": "^6.4.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.1"
+    "redux-form": "^8.2.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-info": "^5.0.11",
-    "@storybook/addon-knobs": "^5.0.11",
-    "@storybook/addon-links": "^5.0.11",
-    "@storybook/react": "^5.0.11",
-    "autoprefixer": "^9.5.1",
+    "@storybook/addon-actions": "^5.1.8",
+    "@storybook/addon-info": "^5.1.8",
+    "@storybook/addon-knobs": "^5.1.8",
+    "@storybook/addon-links": "^5.1.8",
+    "@storybook/react": "^5.1.8",
+    "autoprefixer": "^9.6.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
@@ -44,12 +44,12 @@
     "codecov": "^4.0.0-0",
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.2",
+    "css-loader": "^3.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-jsdoc": "^7.2.0",
+    "eslint-plugin-jsdoc": "^8.0.1",
     "eslint-plugin-react": "^7.13.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
@@ -62,8 +62,8 @@
     "serve-static": "^1.14.1",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   },
   "scripts": {
     "start": "start-storybook -p 6006",
