--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-tag-input": "^6.4.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.4"
+    "redux-form": "^8.2.4",
+    "styled-system": "^5.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
