--- a/package.json
+++ b/package.json
@@ -7,42 +7,42 @@
   "modules.root": "./es",
   "jsnext:main": "./es/index.js",
   "dependencies": {
-    "@emotion/core": "^10.0.7",
-    "@emotion/styled": "^10.0.7",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "bourbon": "^5.1.0",
     "bourbon-neat": "^3.0.1",
     "classnames": "^2.2.6",
-    "emotion-theming": "^10.0.7",
+    "emotion-theming": "^10.0.19",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.12.0",
     "react-dnd": "5.0.0",
     "react-dnd-html5-backend": "3.0.2",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.12.0",
     "react-flatpickr": "^3.9.0",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.1.3",
     "react-tag-input": "^6.4.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
     "redux-form": "^8.2.4",
-    "styled-system": "^5.1.1"
+    "styled-system": "^5.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@storybook/addon-actions": "^5.1.8",
-    "@storybook/addon-info": "^5.1.8",
-    "@storybook/addon-knobs": "^5.1.8",
-    "@storybook/addon-links": "^5.1.8",
-    "@storybook/react": "^5.1.8",
-    "autoprefixer": "^9.6.0",
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-info": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
+    "@storybook/react": "^5.2.6",
+    "autoprefixer": "^9.7.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-react-docgen": "^3.1.0",
+    "babel-plugin-react-docgen": "^3.2.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
@@ -50,15 +50,15 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.3.0",
-    "eslint-loader": "^3.0.0",
-    "eslint-plugin-jsdoc": "^15.9.1",
-    "eslint-plugin-react": "^7.13.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.7.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-jsdoc": "^15.9.5",
+    "eslint-plugin-react": "^7.16.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "rimraf": "^3.0.0",
@@ -66,8 +66,8 @@
     "serve-static": "^1.14.1",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "start": "start-storybook -p 6006",
@@ -102,8 +102,7 @@
   "files": [
     "README.md",
     "lib",
-    "dist",
-    "*.js.flow"
+    "dist"
   ],
   "npmName": "redux-starter-ui",
   "npmFileMap": [
