--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - '10'
+  - '12'
 
 script:
   - npm run validate
@@ -13,12 +13,12 @@ deploy:
     api_key: $GITHUB_OAUTH_TOKEN
     file: "*"
     on:
-      repo: wearepush/redux-starter-ui
+      repo: wearepush/push-ui
       tags: true
   - provider: npm
     email: $NPM_EMAIL
     api_key: $NPM_TOKEN
     skip_cleanup: true
     on:
-      repo: wearepush/redux-starter-ui
+      repo: wearepush/push-ui
       tags: true
