--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
-    "bourbon": "^5.1.0",
-    "bourbon-neat": "^3.0.1",
     "classnames": "^2.2.6",
     "emotion-theming": "^10.0.19",
     "express": "^4.17.1",
@@ -43,9 +41,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
-    "copyfiles": "^2.1.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.7.1",
@@ -54,14 +50,9 @@
     "eslint-plugin-react": "^7.17.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
-    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-loader": "^3.0.0",
     "rimraf": "^3.0.0",
-    "sass-loader": "^8.0.0",
     "serve-static": "^1.14.1",
-    "style-loader": "^1.0.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
@@ -69,9 +60,8 @@
   "scripts": {
     "start": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build": "npm run clean && npm run build:lib && npm run build:lib:css && npm run build:umd && npm run build:umd:min",
+    "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min",
     "build:lib": "babel src --out-dir lib --ignore src/**/__tests__,src/**/__mocks__,src/**/*.stories.js",
-    "build:lib:css": "copyfiles -a -u 1 'src/**/*.scss' lib",
     "build:umd": "cross-env NODE_ENV=development webpack src/index.js -o dist/index.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js -o dist/index.min.js",
     "heroku-postbuild": "npm run build-storybook",
