--- a/package.json
+++ b/package.json
@@ -11,28 +11,25 @@
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dnd": "5.0.0",
-    "react-dnd-html5-backend": "3.0.2",
     "react-dom": "^16.12.0",
     "react-flatpickr": "^3.9.0",
     "react-redux": "^7.1.3",
-    "react-tag-input": "^6.4.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
     "redux-form": "^8.2.4",
-    "styled-system": "^5.1.2"
+    "styled-system": "^5.1.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
-    "@storybook/addon-actions": "^5.2.7",
-    "@storybook/addon-info": "^5.2.7",
-    "@storybook/addon-knobs": "^5.2.7",
-    "@storybook/addon-links": "^5.2.7",
-    "@storybook/react": "^5.2.7",
-    "autoprefixer": "^9.7.2",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-info": "^5.2.8",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/react": "^5.2.8",
+    "autoprefixer": "^9.7.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
@@ -42,17 +39,20 @@
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
     "cross-env": "^6.0.3",
+    "css-loader": "^3.2.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.7.1",
+    "eslint": "^6.7.2",
     "eslint-loader": "^3.0.2",
-    "eslint-plugin-jsdoc": "^18.1.6",
+    "eslint-plugin-jsdoc": "^18.4.3",
     "eslint-plugin-react": "^7.17.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "node-sass": "^4.13.0",
     "rimraf": "^3.0.0",
+    "sass-loader": "^8.0.0",
     "serve-static": "^1.14.1",
+    "style-loader": "^1.0.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
