--- a/.eslintrc
+++ b/.eslintrc
@@ -27,5 +27,10 @@
     "beforeAll": true,
     "beforeEach": true,
     "global": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
