[feat] add checkbox component

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "./lib/index.js",
   "dependencies": {
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
+    "@emotion/core": "^11.0.0-next.8",
+    "@emotion/styled": "^11.0.0-next.8",
     "classnames": "^2.2.6",
-    "emotion-theming": "^10.0.19",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -20,10 +19,10 @@
     "styled-system": "^5.1.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-info": "^5.2.8",
     "@storybook/addon-knobs": "^5.2.8",
@@ -34,16 +33,17 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-css-modules-transform": "^1.6.2",
+    "babel-plugin-emotion": "^10.0.23",
     "babel-plugin-react-docgen": "^3.2.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.1",
+    "css-loader": "^3.3.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.7.2",
-    "eslint-loader": "^3.0.2",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-jsdoc": "^18.4.3",
     "eslint-plugin-react": "^7.17.0",
     "identity-obj-proxy": "^3.0.0",
