--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -5,6 +5,7 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    ["react-docgen", {}, 'react-docgen-storybook']
+    "emotion",
+    ["react-docgen", {}, "react-docgen-storybook"]
   ]
 }
